--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,10 @@ buildscript {
         compileSdkVersion = 28
         targetSdkVersion = 28
         googlePlayServicesAuthVersion = "16.0.1"
+        supportLibVersion   = "28.0.0"
+        playServicesVersion = "17.0.0" // or find latest version
+        androidMapsUtilsVersion = "+0.5"
+
     }
     repositories {
         google()
