--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-community/google-signin": "^4.0.0",
     "firebase": "^7.14.2",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-maps": "^0.27.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
